--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
     "supertest": "^4.0.2"
   }
